--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TresEnRaya</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <section>
-        <h1 class="titulorojo">Turno del 🟥</h1>
-        <h2 class="titulogris">No hay ultimo ganador</h2>
-        <div class="juego">
-            <button id="arriba"></button>
-            <button id="arriba"></button>
-            <button id="arriba"></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button id="izquierda"></button>
-            <button></button>
-            <button id="derecha"></button>
-        </div>
-    </section>
-    <script src="js/main.js"></script>
+        <input type="text" id="boardSize" placeholder="Introduce el tamaño del tablero">
+        <button id="botonGenerar" onclick="generateBoard()">Crear tablero</button>
+        <button id="botonPlay" onclick="playGame()">Play</button>
+        <button id="botonStop" onclick="stopGame()">Stop</button>
+        <button id="botonReset" onclick="resetGame()">Reset</button>
+        <div id="board"></div>
+    </section>    
 </body>
+<script src="js/main.js"></script>
 </html>
