--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <section>
         <input type="text" id="boardSize" placeholder="Introduce el tamaño del tablero">
-        <button id="botonGenerar" onclick="generateBoard()">Crear tablero</button>
-        <button id="botonPlay" onclick="playGame()">Play</button>
-        <button id="botonStop" onclick="stopGame()">Stop</button>
-        <button id="botonReset" onclick="resetGame()">Reset</button>
+        <button id="botonGenerar" onclick="generarTablero()">Crear tablero</button>
+        <button id="botonPlay" onclick="iniciarJuego()">Play</button>
+        <button id="botonStop" onclick="detenerJuego()">Stop</button>
+        <button id="botonReset" onclick="reiniciarJuego()">Reset</button>
+        <h1 id="ciclosCount"></h1>
         <div id="board"></div>
     </section>    
 </body>
